analyseur.output
Terminals unused in grammar

   LEFT_PARENTHESIS
   RIGHT_PARENTHESIS
   NUMBER


Grammar

    0 $accept: tags $end

    1 tags: tag tags
    2     | tag
    3     | LEFT_BRACKET tags RIGHT_BRACKET
    4     | LEFT_BRACKET tags RIGHT_BRACKET tags
    5     | SPACES tags
    6     | SPACES

    7 tag: LABEL LEFT_SQUARE_BRACKET attribute RIGHT_SQUARE_BRACKET LEFT_BRACKET content RIGHT_BRACKET
    8    | LABEL LEFT_SQUARE_BRACKET attribute RIGHT_SQUARE_BRACKET SPACES LEFT_BRACKET content RIGHT_BRACKET
    9    | LABEL LEFT_SQUARE_BRACKET attribute RIGHT_SQUARE_BRACKET SLASH
   10    | LABEL LEFT_BRACKET content RIGHT_BRACKET
   11    | LEFT_BRACKET RIGHT_BRACKET
   12    | LABEL SLASH

   13 attribute: LABEL EQUAL string
   14          | LABEL EQUAL string attribute
   15          | SPACES
   16          | SPACES attribute

   17 content: string content
   18        | tag content
   19        | string
   20        | tag
   21        | LEFT_BRACKET content RIGHT_BRACKET
   22        | SPACES content
   23        | SPACES

   24 string: STRING string
   25       | STRING_SPACES string
   26       | STRING
   27       | STRING_SPACES


Terminals, with rules where they appear

$end (0) 0
error (256)
LEFT_BRACKET (258) 3 4 7 8 10 11 21
RIGHT_BRACKET (259) 3 4 7 8 10 11 21
LEFT_SQUARE_BRACKET (260) 7 8 9
RIGHT_SQUARE_BRACKET (261) 7 8 9
LEFT_PARENTHESIS (262)
RIGHT_PARENTHESIS (263)
EQUAL (264) 13 14
SLASH (265) 9 12
NUMBER (266)
STRING (267) 24 26
STRING_SPACES (268) 25 27
SPACES (269) 5 6 8 15 16 22 23
LABEL (270) 7 8 9 10 12 13 14


Nonterminals, with rules where they appear

$accept (16)
    on left: 0
tags (17)
    on left: 1 2 3 4 5 6, on right: 0 1 3 4 5
tag (18)
    on left: 7 8 9 10 11 12, on right: 1 2 18 20
attribute (19)
    on left: 13 14 15 16, on right: 7 8 9 14 16
content (20)
    on left: 17 18 19 20 21 22 23, on right: 7 8 10 17 18 21 22
string (21)
    on left: 24 25 26 27, on right: 13 14 17 19 24 25


State 0

    0 $accept: . tags $end

    LEFT_BRACKET  shift, and go to state 1
    SPACES        shift, and go to state 2
    LABEL         shift, and go to state 3

    tags  go to state 4
    tag   go to state 5


State 1

    3 tags: LEFT_BRACKET . tags RIGHT_BRACKET
    4     | LEFT_BRACKET . tags RIGHT_BRACKET tags
   11 tag: LEFT_BRACKET . RIGHT_BRACKET

    LEFT_BRACKET   shift, and go to state 1
    RIGHT_BRACKET  shift, and go to state 6
    SPACES         shift, and go to state 2
    LABEL          shift, and go to state 3

    tags  go to state 7
    tag   go to state 5


State 2

    5 tags: SPACES . tags
    6     | SPACES .

    LEFT_BRACKET  shift, and go to state 1
    SPACES        shift, and go to state 2
    LABEL         shift, and go to state 3

    $default  reduce using rule 6 (tags)

    tags  go to state 8
    tag   go to state 5


State 3

    7 tag: LABEL . LEFT_SQUARE_BRACKET attribute RIGHT_SQUARE_BRACKET LEFT_BRACKET content RIGHT_BRACKET
    8    | LABEL . LEFT_SQUARE_BRACKET attribute RIGHT_SQUARE_BRACKET SPACES LEFT_BRACKET content RIGHT_BRACKET
    9    | LABEL . LEFT_SQUARE_BRACKET attribute RIGHT_SQUARE_BRACKET SLASH
   10    | LABEL . LEFT_BRACKET content RIGHT_BRACKET
   12    | LABEL . SLASH

    LEFT_BRACKET         shift, and go to state 9
    LEFT_SQUARE_BRACKET  shift, and go to state 10
    SLASH                shift, and go to state 11


State 4

    0 $accept: tags . $end

    $end  shift, and go to state 12


State 5

    1 tags: tag . tags
    2     | tag .

    LEFT_BRACKET  shift, and go to state 1
    SPACES        shift, and go to state 2
    LABEL         shift, and go to state 3

    $default  reduce using rule 2 (tags)

    tags  go to state 13
    tag   go to state 5


State 6

   11 tag: LEFT_BRACKET RIGHT_BRACKET .

    $default  reduce using rule 11 (tag)


State 7

    3 tags: LEFT_BRACKET tags . RIGHT_BRACKET
    4     | LEFT_BRACKET tags . RIGHT_BRACKET tags

    RIGHT_BRACKET  shift, and go to state 14


State 8

    5 tags: SPACES tags .

    $default  reduce using rule 5 (tags)


State 9

   10 tag: LABEL LEFT_BRACKET . content RIGHT_BRACKET

    LEFT_BRACKET   shift, and go to state 15
    STRING         shift, and go to state 16
    STRING_SPACES  shift, and go to state 17
    SPACES         shift, and go to state 18
    LABEL          shift, and go to state 3

    tag      go to state 19
    content  go to state 20
    string   go to state 21


State 10

    7 tag: LABEL LEFT_SQUARE_BRACKET . attribute RIGHT_SQUARE_BRACKET LEFT_BRACKET content RIGHT_BRACKET
    8    | LABEL LEFT_SQUARE_BRACKET . attribute RIGHT_SQUARE_BRACKET SPACES LEFT_BRACKET content RIGHT_BRACKET
    9    | LABEL LEFT_SQUARE_BRACKET . attribute RIGHT_SQUARE_BRACKET SLASH

    SPACES  shift, and go to state 22
    LABEL   shift, and go to state 23

    attribute  go to state 24


State 11

   12 tag: LABEL SLASH .

    $default  reduce using rule 12 (tag)


State 12

    0 $accept: tags $end .

    $default  accept


State 13

    1 tags: tag tags .

    $default  reduce using rule 1 (tags)


State 14

    3 tags: LEFT_BRACKET tags RIGHT_BRACKET .
    4     | LEFT_BRACKET tags RIGHT_BRACKET . tags

    LEFT_BRACKET  shift, and go to state 1
    SPACES        shift, and go to state 2
    LABEL         shift, and go to state 3

    $default  reduce using rule 3 (tags)

    tags  go to state 25
    tag   go to state 5


State 15

   11 tag: LEFT_BRACKET . RIGHT_BRACKET
   21 content: LEFT_BRACKET . content RIGHT_BRACKET

    LEFT_BRACKET   shift, and go to state 15
    RIGHT_BRACKET  shift, and go to state 6
    STRING         shift, and go to state 16
    STRING_SPACES  shift, and go to state 17
    SPACES         shift, and go to state 18
    LABEL          shift, and go to state 3

    tag      go to state 19
    content  go to state 26
    string   go to state 21


State 16

   24 string: STRING . string
   26       | STRING .

    STRING         shift, and go to state 16
    STRING_SPACES  shift, and go to state 17

    $default  reduce using rule 26 (string)

    string  go to state 27


State 17

   25 string: STRING_SPACES . string
   27       | STRING_SPACES .

    STRING         shift, and go to state 16
    STRING_SPACES  shift, and go to state 17

    $default  reduce using rule 27 (string)

    string  go to state 28


State 18

   22 content: SPACES . content
   23        | SPACES .

    LEFT_BRACKET   shift, and go to state 15
    STRING         shift, and go to state 16
    STRING_SPACES  shift, and go to state 17
    SPACES         shift, and go to state 18
    LABEL          shift, and go to state 3

    $default  reduce using rule 23 (content)

    tag      go to state 19
    content  go to state 29
    string   go to state 21


State 19

   18 content: tag . content
   20        | tag .

    LEFT_BRACKET   shift, and go to state 15
    STRING         shift, and go to state 16
    STRING_SPACES  shift, and go to state 17
    SPACES         shift, and go to state 18
    LABEL          shift, and go to state 3

    $default  reduce using rule 20 (content)

    tag      go to state 19
    content  go to state 30
    string   go to state 21


State 20

   10 tag: LABEL LEFT_BRACKET content . RIGHT_BRACKET

    RIGHT_BRACKET  shift, and go to state 31


State 21

   17 content: string . content
   19        | string .

    LEFT_BRACKET   shift, and go to state 15
    STRING         shift, and go to state 16
    STRING_SPACES  shift, and go to state 17
    SPACES         shift, and go to state 18
    LABEL          shift, and go to state 3

    $default  reduce using rule 19 (content)

    tag      go to state 19
    content  go to state 32
    string   go to state 21


State 22

   15 attribute: SPACES .
   16          | SPACES . attribute

    SPACES  shift, and go to state 22
    LABEL   shift, and go to state 23

    $default  reduce using rule 15 (attribute)

    attribute  go to state 33


State 23

   13 attribute: LABEL . EQUAL string
   14          | LABEL . EQUAL string attribute

    EQUAL  shift, and go to state 34


State 24

    7 tag: LABEL LEFT_SQUARE_BRACKET attribute . RIGHT_SQUARE_BRACKET LEFT_BRACKET content RIGHT_BRACKET
    8    | LABEL LEFT_SQUARE_BRACKET attribute . RIGHT_SQUARE_BRACKET SPACES LEFT_BRACKET content RIGHT_BRACKET
    9    | LABEL LEFT_SQUARE_BRACKET attribute . RIGHT_SQUARE_BRACKET SLASH

    RIGHT_SQUARE_BRACKET  shift, and go to state 35


State 25

    4 tags: LEFT_BRACKET tags RIGHT_BRACKET tags .

    $default  reduce using rule 4 (tags)


State 26

   21 content: LEFT_BRACKET content . RIGHT_BRACKET

    RIGHT_BRACKET  shift, and go to state 36


State 27

   24 string: STRING string .

    $default  reduce using rule 24 (string)


State 28

   25 string: STRING_SPACES string .

    $default  reduce using rule 25 (string)


State 29

   22 content: SPACES content .

    $default  reduce using rule 22 (content)


State 30

   18 content: tag content .

    $default  reduce using rule 18 (content)


State 31

   10 tag: LABEL LEFT_BRACKET content RIGHT_BRACKET .

    $default  reduce using rule 10 (tag)


State 32

   17 content: string content .

    $default  reduce using rule 17 (content)


State 33

   16 attribute: SPACES attribute .

    $default  reduce using rule 16 (attribute)


State 34

   13 attribute: LABEL EQUAL . string
   14          | LABEL EQUAL . string attribute

    STRING         shift, and go to state 16
    STRING_SPACES  shift, and go to state 17

    string  go to state 37


State 35

    7 tag: LABEL LEFT_SQUARE_BRACKET attribute RIGHT_SQUARE_BRACKET . LEFT_BRACKET content RIGHT_BRACKET
    8    | LABEL LEFT_SQUARE_BRACKET attribute RIGHT_SQUARE_BRACKET . SPACES LEFT_BRACKET content RIGHT_BRACKET
    9    | LABEL LEFT_SQUARE_BRACKET attribute RIGHT_SQUARE_BRACKET . SLASH

    LEFT_BRACKET  shift, and go to state 38
    SLASH         shift, and go to state 39
    SPACES        shift, and go to state 40


State 36

   21 content: LEFT_BRACKET content RIGHT_BRACKET .

    $default  reduce using rule 21 (content)


State 37

   13 attribute: LABEL EQUAL string .
   14          | LABEL EQUAL string . attribute

    SPACES  shift, and go to state 22
    LABEL   shift, and go to state 23

    $default  reduce using rule 13 (attribute)

    attribute  go to state 41


State 38

    7 tag: LABEL LEFT_SQUARE_BRACKET attribute RIGHT_SQUARE_BRACKET LEFT_BRACKET . content RIGHT_BRACKET

    LEFT_BRACKET   shift, and go to state 15
    STRING         shift, and go to state 16
    STRING_SPACES  shift, and go to state 17
    SPACES         shift, and go to state 18
    LABEL          shift, and go to state 3

    tag      go to state 19
    content  go to state 42
    string   go to state 21


State 39

    9 tag: LABEL LEFT_SQUARE_BRACKET attribute RIGHT_SQUARE_BRACKET SLASH .

    $default  reduce using rule 9 (tag)


State 40

    8 tag: LABEL LEFT_SQUARE_BRACKET attribute RIGHT_SQUARE_BRACKET SPACES . LEFT_BRACKET content RIGHT_BRACKET

    LEFT_BRACKET  shift, and go to state 43


State 41

   14 attribute: LABEL EQUAL string attribute .

    $default  reduce using rule 14 (attribute)


State 42

    7 tag: LABEL LEFT_SQUARE_BRACKET attribute RIGHT_SQUARE_BRACKET LEFT_BRACKET content . RIGHT_BRACKET

    RIGHT_BRACKET  shift, and go to state 44


State 43

    8 tag: LABEL LEFT_SQUARE_BRACKET attribute RIGHT_SQUARE_BRACKET SPACES LEFT_BRACKET . content RIGHT_BRACKET

    LEFT_BRACKET   shift, and go to state 15
    STRING         shift, and go to state 16
    STRING_SPACES  shift, and go to state 17
    SPACES         shift, and go to state 18
    LABEL          shift, and go to state 3

    tag      go to state 19
    content  go to state 45
    string   go to state 21


State 44

    7 tag: LABEL LEFT_SQUARE_BRACKET attribute RIGHT_SQUARE_BRACKET LEFT_BRACKET content RIGHT_BRACKET .

    $default  reduce using rule 7 (tag)


State 45

    8 tag: LABEL LEFT_SQUARE_BRACKET attribute RIGHT_SQUARE_BRACKET SPACES LEFT_BRACKET content . RIGHT_BRACKET

    RIGHT_BRACKET  shift, and go to state 46


State 46

    8 tag: LABEL LEFT_SQUARE_BRACKET attribute RIGHT_SQUARE_BRACKET SPACES LEFT_BRACKET content RIGHT_BRACKET .

    $default  reduce using rule 8 (tag)
